--- a/ExpertAdministration.Web/Shared/MainLayout.razor
+++ b/ExpertAdministration.Web/Shared/MainLayout.razor
@@ -1,8 +1,9 @@
-﻿@inherits LayoutComponentBase
+﻿@using Radzen.Blazor
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <NavMenu/>
     </div>
 
     <main>
@@ -10,8 +11,14 @@
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
+
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
+<RadzenDialog/>
+<RadzenNotification/>
+<RadzenContextMenu/>
+<RadzenTooltip/>
