add new offers page

--- a/ExpertAdministration.Web/Pages/Index.razor
+++ b/ExpertAdministration.Web/Pages/Index.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using ExpertAdministration.Web.Common
+@inject NavigationHistory NavigationHistory
 
 <PageTitle>Status Monitor</PageTitle>
 
@@ -6,4 +8,4 @@
 
 Welcome to ExpertBG's admin panel!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<SurveyPrompt Title="How is Blazor working for you?"/>
