--- a/ExpertAdministration.Web/Shared/NavMenu.razor
+++ b/ExpertAdministration.Web/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="newoffers">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> For Review
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="offermonitor">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Offer Monitor
             </NavLink>
